retention/main/default/objects/Queue_Admin_Setting__c/Queue_Admin_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Queue Admin Setting</label>
</CustomObject>