retention/main/default/objects/Queue_Admin_Setting__c/fields/ChunkSize__c.field-meta.xml
<CustomField>
    <fullName>ChunkSize__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>Scope size passed to Database.executeBatch. 2000 is the Apex batch upper limit. Lower this to reduce per-chunk governor pressure.</description>
    <label>Chunk Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>