retention/main/default/objects/Queue_Admin_Setting__c/fields/EmptyRecycleBin__c.field-meta.xml
<CustomField>
    <fullName>EmptyRecycleBin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When false (default), deleted rows stay in the recycle bin for the 15-day recovery window. When true, Database.emptyRecycleBin() runs after each chunk to preserve the org-wide 15M recycle-bin cap.</description>
    <label>Empty Recycle Bin</label>
    <type>Checkbox</type>
</CustomField>