retention/main/default/objects/Queue_Admin_Setting__c/fields/GlobalDryRun__c.field-meta.xml
<CustomField>
    <fullName>GlobalDryRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, forces every policy into dry-run mode regardless of its DryRun__c flag. Emergency freeze switch.</description>
    <label>Global Dry Run</label>
    <type>Checkbox</type>
</CustomField>