retention/main/default/objects/Queue_Admin_Setting__c/fields/IsRetentionEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsRetentionEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master kill-switch. When false, JobQueueRetention.execute() is a no-op regardless of policy IsActive__c values.</description>
    <label>Is Retention Enabled</label>
    <type>Checkbox</type>
</CustomField>