retention/main/default/objects/Queue_Admin_Setting__c/fields/LogRetentionDays__c.field-meta.xml
<CustomField>
    <fullName>LogRetentionDays__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Queue_Purge_Log__c records older than this are eligible for auto-purge by the retention job itself.</description>
    <label>Log Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>