retention/main/default/objects/Queue_Admin_Setting__c/fields/MaxRecordsPerRun__c.field-meta.xml
<CustomField>
    <fullName>MaxRecordsPerRun__c</fullName>
    <defaultValue>50000</defaultValue>
    <description>Global ceiling summed across all policies per scheduled cycle. When reached, remaining policies are skipped (SKIPPED_GLOBAL_CAP) and run next cycle.</description>
    <label>Max Records Per Run (global)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>